--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 /__pycache__/
 UpgradeLog.htm
 *.db
-/variables/active_token.py
 
 # Modified from:
 #     https://github.com/github/gitignore/blob/master/Unity.gitignore
@@ -77,3 +76,4 @@ Thumbs.db.meta
 *.vscode
 settings/not_synchronized.py
 error_log.txt
+*.pyc
